--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "heroku-postbuild": "cd Frontend/easynotes && npm install && npm run build"
+    "heroku-postbuild": "cd client && yarn && yarn run build"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +20,4 @@
     "nodemon": "^2.0.6",
     "request": "^2.88.2"
   }
-
 }
