--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "easynotes",
   "version": "0.0.1",
   "scripts": {
-    "start": "cd client && yarn && yarn run build"
+    "start": "node index.js",
+    "heroku-postbuild": "cd client && yarn && yarn run build"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
