--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "heroku-postbuild": "cd client && yarn && yarn run build"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1"
   }
 }
